src/test/deca/context/invalid/comparing_two_incompatible_types.deca
// Description:
//    comparer 2 types différents 
//
// Resultats:
// Erreur contextuelle
// Ligne 13 : Both are not same type : int and boolean
//
//
// Historique:
//    cree le 06/01/2025

{   
    boolean b = 3<false;
}